--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,29 @@
 {
-    "name": "evolution7/bugsnag-bundle",
+    "name": "simpleweb/bugsnag-bundle",
     "type": "symfony-bundle",
     "description": "Bugsnag error reporting integration for Symfony2",
     "keywords": ["symfony2", "bugsnag", "exceptions", "errors", "logging", "tracking"],
-    "homepage": "https://github.com/evolution7/Evolution7BugsnagBundle",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Steve Lacey",
+            "email": "steve@simpleweb.co.uk"
+        }
+    ],
     "require": {
-        "php": ">=5.3.3",
+        "php": "~5.3",
         "bugsnag/bugsnag": "2.*",
         "symfony/symfony": ">=2.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~3.7"
     },
     "autoload": {
-        "psr-0": { "Evolution7\\BugsnagBundle": "" }
+        "psr-4": { "Simpleweb\\BugsnagBundle\\": "" }
     },
-    "target-dir": "Evolution7/BugsnagBundle"
-
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
+    }
 }
