--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "~5.3",
+        "php": ">=5.3.0",
         "bugsnag/bugsnag": "2.*",
         "symfony/symfony": ">=2.2.0"
     },
